fixed responsive design - resume distort

--- a/contact.css
+++ b/contact.css
@@ -45,3 +45,29 @@ body {
     text-decoration: none;
     padding: 0 12px;
 }
+
+
+/* Responsive styling */
+
+@media (max-width: 768px) {
+    .navbar_contents {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navlinks {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 8px;
+        margin-top: 10px;
+    }
+
+    .title {
+        font-size: 48px;
+        text-shadow: 8px 4px #9b82c3;
+    }
+
+    .icon img {
+        height: 32px;
+        margin: 10px 0;
+    }
+}
