--- a/resume.css
+++ b/resume.css
@@ -50,14 +50,15 @@ body {
 
 .resume_container {
     padding: 40px 15%;
-    max-width: 100%;
-    overflow: hidden;
 }
 
 .resume_img {
     width: 100%;
-    height: min-content;
-
+    height: auto;
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    
     box-shadow: 0px 0px 40px rgba(0,0,0,0.3);
 }
 
